--- a/portfolio.html
+++ b/portfolio.html
@@ -274,7 +274,7 @@
                             </address>
                          </div>
                     <div class="join-div">
-                        <h3>Приєднуйтесь</h3>
+                        <h4>Приєднуйтесь</h4>
                         <div class="join-help-div">
                             <ul class="join-cont">
                                 <li>
@@ -307,6 +307,12 @@
                                 </li>                                  
                             </ul>
                         </div>
+                    </div>
+                    <div class="input-div">
+
+                        <h4 class="email-txt">Підпишіться на розсилку</h4>
+                        <input class="email-input" type="email" name="email" placeholder="E-mail">
+                        <button class="email-btn">Підписатися</button>
                     </div>
                 </div>
             </footer>  
