--- a/webstudio.html
+++ b/webstudio.html
@@ -138,7 +138,9 @@
             <div class="main-nav">       
                  <a class="main-logo"><span class="Web">Web</span>Studio</a></li>               
                 <nav class="main-nav-child">
-                    <ul class="navigation-cont">
+                  
+
+                    <ul class="navigation-cont ">
                         <li class="navigation-cont-el"><a href="#" class="navigation-cont-a">Студія</a></li>
                         <li class="navigation-cont-el"><a  href="#"class="navigation-cont-a">Портфоліо</a></li>
                         <li class="navigation-cont-el"><a href="#"  class="navigation-cont-a">Контакти</a></li>      
@@ -243,7 +245,7 @@
                             <p class="svg-subtitle">Значимість цих проблем настільки<br>очевидна, що реалізація планових<br>завдань.</p> 
                         </li>
                 </ul>
-            <h2 class="employment">Чим ми займаємося</h2>
+            <h2 class="employment-pic" >Чим ми займаємося</h2>
             <ul class="picture-box">
                 <li><div class="picture-overlay"><p>Десктопні додатки</p></div><img class="picture-box-item" src="./img/box 1.png" alt=""></li>
                 <li><div class="picture-overlay"><p>Мобільні додатки</p></div><img class="picture-box-item" src="./img/box 2.png" alt=""> </li>
