--- a/webstudio.html
+++ b/webstudio.html
@@ -512,9 +512,11 @@
                     </div>
                     <div class="input-div">
 
-                        <h4 class="email-txt">Підпишіться на розсилку</h4>
+                        <h4 class="email-txt">Підпишіться на розсилку</h4>  
+                        <div class="input-button-box">
                         <input class="email-input" type="email" name="email" placeholder="E-mail">
                         <button class="email-btn">Підписатися</button>
+                        </div>
                     </div>
                 </div>
             </footer>  
