--- a/webstudio.html
+++ b/webstudio.html
@@ -136,10 +136,28 @@
     <header class="main-header">
         <div class="container">
             <div class="main-nav">       
-                 <a class="main-logo"><span class="Web">Web</span>Studio</a></li>               
-                <nav class="main-nav-child">
-                  
+                 <a class="main-logo"><span class="Web">Web</span>Studio</a></li> 
 
+                 <button 
+                 class="menu-toggle js-open-menu" 
+                 aria-expanded="false" 
+                 aria-controls="mobile-menu"> 
+                 <svg 
+                   width="24" 
+                   height="24" 
+                   fill="currentColor" 
+                   viewBox="0 0 20 20" 
+                   xmlns="http://www.w3.org/2000/svg" 
+                 > 
+                   <path 
+                     fill-rule="evenodd" 
+                     d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z" 
+                     clip-rule="evenodd" 
+                   ></path> 
+                 </svg> 
+               </button>
+
+                <nav class="main-nav-child">   
                     <ul class="navigation-cont ">
                         <li class="navigation-cont-el"><a href="#" class="navigation-cont-a">Студія</a></li>
                         <li class="navigation-cont-el"><a  href="#"class="navigation-cont-a">Портфоліо</a></li>
@@ -230,19 +248,19 @@
                 <ul class="svg-cont">  
                         <li class="svg-cont-el">                        
                             <h3 class="svg-cap">Увага до деталей </h3>
-                            <p class="svg-subtitle">Ідейні міркування, і навіть початок<br>повсякденної роботи з формування<br>позиції.</p>                       
+                            <p class="svg-subtitle">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>                       
                         </li>
                         <li class="svg-cont-el">
                             <h3 class="svg-cap"> Пунктуальність </h3>
-                            <p class="svg-subtitle"> Завдання організації, особливо рамки <br>і місце навчання кадрів тягне у себе.</p>
+                            <p class="svg-subtitle"> Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
                         </li>
                         <li class="svg-cont-el">
                             <h3 class="svg-cap">Планування</h3>
-                            <p class="svg-subtitle">Так само консультація з широким<br>активом значною мірою зумовляє.</p>
+                            <p class="svg-subtitle">Так само консультація з широким активом значною мірою зумовляє.</p>
                         </li>              
                         <li class="svg-cont-el">
                             <h3 class="svg-cap"> Сучасні технолгії</h3>
-                            <p class="svg-subtitle">Значимість цих проблем настільки<br>очевидна, що реалізація планових<br>завдань.</p> 
+                            <p class="svg-subtitle">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p> 
                         </li>
                 </ul>
             <h2 class="employment-pic" >Чим ми займаємося</h2>
@@ -513,14 +531,55 @@
                     <div class="input-div">
 
                         <h4 class="email-txt">Підпишіться на розсилку</h4>  
-                        <div class="input-button-box">
                         <input class="email-input" type="email" name="email" placeholder="E-mail">
                         <button class="email-btn">Підписатися</button>
-                        </div>
+                     
                     </div>
                 </div>
             </footer>  
         </div>
     </div>
+    <div class="menu-container js-menu-container" id="mobile-menu"> 
+        <button class="menu-toggle js-close-menu"> 
+          <svg 
+            fill="currentColor" 
+            viewBox="0 0 20 20" 
+            xmlns="http://www.w3.org/2000/svg" 
+            width="24" 
+            height="24"> 
+            <path 
+              fill-rule="evenodd" 
+              d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" 
+              clip-rule="evenodd" 
+            ></path> 
+          </svg> 
+        </button> 
+                <div class="mobile-menu">
+                    <ul class="mobile-menu-el"> 
+                        <li><a href="#" class="link">Студія</a></li> 
+                        <li><a href="#" class="link">Портфоліо</a></li> 
+                        <li><a href="#" class="link">Контакти</a></li> 
+                    </ul> 
+
+                    <ul class="mobile-menu-item">
+                        <li><a href="#">+38 096 111 11 11</a></li>
+                        <li><a href="#">info@devstudio.com</a></li>
+                    </ul>
+
+                    <ul class="social-networks">
+                        <li><a href="#">Instagram</a></li>
+                        <li><a href="#">Twitter</a></li>
+                        <li><a href="#">Facebook</a></li>
+                        <li><a href="#">LinkedIn</a></li>
+                    </ul>
+                </div>
+      </div>
+    <script 
+      defer 
+      src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js" 
+      integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA==" 
+      crossorigin="anonymous" 
+    ></script> 
+    <script defer src="./mobile-menu.js"></script>
 </body>
 </html>
