--- a/webstudio.html
+++ b/webstudio.html
@@ -265,9 +265,9 @@
                 </ul>
             <h2 class="employment-pic" >Чим ми займаємося</h2>
             <ul class="picture-box">
-                <li><div class="picture-overlay"><p>Десктопні додатки</p></div><img class="picture-box-item" src="./img/box 1.png" alt=""></li>
-                <li><div class="picture-overlay"><p>Мобільні додатки</p></div><img class="picture-box-item" src="./img/box 2.png" alt=""> </li>
-                <li><div class="picture-overlay"><p>Дизайнерські рішення</p></div><img class="picture-box-item" src="./img/box 3.png" alt=""></li>
+                <li><div class="picture-overlay"><p>Десктопні додатки</p></div><img class="picture-box-item" src="./img/studio/picture-box1.png" srcset="/img/studio/picture-box1.png , /img/studio/picture-box1@2x.png" alt=""></li>
+                <li><div class="picture-overlay"><p>Мобільні додатки</p></div><img class="picture-box-item" src="./img/studio/picture-box2.png" srcset="/img/studio/picture-box2.png , /img/studio/picture-box2@2x.png" alt=""> </li>
+                <li><div class="picture-overlay"><p>Дизайнерські рішення</p></div><img class="picture-box-item" src="./img/studio/picture-box3.png" srcset="/img/studio/picture-box3.png , /img/studio/picture-box3@2x.png"  alt=""></li>
             </ul>
         </div>
             <div class="background-div">
@@ -276,7 +276,7 @@
                 <ul class="team-list">
                     <div class="team-div">
                         <li class="team-cont">
-                            <img class="people-pic" src="./img/img.png" alt="">
+                            <img class="people-pic" src="./img/studio/team1.png" srcset="./img/studio/team1.png , ./img/studio/team1@2x.png"   alt="">
                             <h4 class="team-cont-tit">Ігор Дем'яненко</h4>
                             <p class="team-cont-job">Product Designer</p>
                             <ul class="icon-cont">
@@ -313,7 +313,7 @@
                     </div>
                     <div class="team-div">
                         <li class="team-cont">
-                            <img class="people-pic" src="./img/img (1).png" alt="">
+                            <img class="people-pic" src="./img/studio/team2.png" srcset="./img/studio/team2.png , ./img/studio/team2@2x.png"alt="">
                             <h4 class="team-cont-tit">Ольга Рєпіна</h4>
                             <p class="team-cont-job">Frontend Developer</p>
                             <ul class="icon-cont">
@@ -350,7 +350,7 @@
                     </div>
                     <div class="team-div">
                         <li class="team-cont">
-                            <img class="people-pic" src="./img/img (4).png" alt="">
+                            <img class="people-pic" src="./img/studio/team3.png" srcset="./img/studio/team3.png , ./img/studio/team3@2x.png" alt="">
                             <h4 class="team-cont-tit">Микола Тарасов</h4>
                             <p class="team-cont-job">Marketing</p>
                             <ul class="icon-cont">
@@ -387,7 +387,7 @@
                     </div>
                     <div class="team-div">
                         <li class="team-cont">
-                            <img class="people-pic" src="./img/img (3).png" alt="">
+                            <img class="people-pic" src="./img/studio/team4.png" srcset="./img/studio/team4.png , ./img/studio/team4@2x.png" alt="">
                             <h4 class="team-cont-tit">Михайло Єрмаков</h4>
                             <p class="team-cont-job">UI Designer</p>
                                 <ul class="icon-cont">
@@ -483,58 +483,60 @@
         <div class="container">
             <footer class="main-footer">
                  <div class="foot-cont">
-                         <div>
-                                <a class="logo-foot"><span class="Web">Web</span>Studio</a>
-                            <address class="address">
-                                <ul class="address-ul">
-                                    <li><a class="address-item-1" href="#"> м. Київ, пр-т Лесі Українки, 26</a></li>
-                                    <li><a class="address-item" href="#">info@devstudio.com</a></li>
-                                    <li><a class="address-item" href="#">+38 096 111 11 11</a></li>
+                    <section class="foot-section">
+                            <div>
+                                    <a class="logo-foot"><span class="Web">Web</span>Studio</a>
+                                <address class="address">
+                                    <ul class="address-ul">
+                                        <li><a class="address-item-1" href="#"> м. Київ, пр-т Лесі Українки, 26</a></li>
+                                        <li><a class="address-item" href="#">info@devstudio.com</a></li>
+                                        <li><a class="address-item" href="#">+38 096 111 11 11</a></li>
+                                    </ul>
+                                </address>
+                            </div>
+                        <div class="join-div">
+                            <h4>Приєднуйтесь</h4>
+                            <div class="join-help-div">
+                                <ul class="join-cont">
+                                    <li>
+                                        <div class="join-circle">
+                                            <svg class="join" width="20px" height="20px" >                                         
+                                                <use class="join-item" href="#icon-instagram"></use>
+                                            </svg>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="join-circle">
+                                            <svg class="join" width="20px" height="20px" >
+                                                <use class="join-item" href="#icon-twitter"></use>
+                                            </svg>
+                                        </div>
+                                    </li>
+                                    <li> 
+                                        <div class="join-circle">
+                                            <svg class="join" width="20px" height="20px" >
+                                                <use class="join-item" href="#icon-facebook"></use>
+                                            </svg>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="join-circle">
+                                            <svg class="join" width="20px" height="20px" >
+                                                <use class="join-item" href="#icon-linkedin2"></use>
+                                            </svg>
+                                        </div>
+                                    </li>                                  
                                 </ul>
-                            </address>
-                         </div>
-                    <div class="join-div">
-                        <h4>Приєднуйтесь</h4>
-                        <div class="join-help-div">
-                            <ul class="join-cont">
-                                <li>
-                                    <div class="join-circle">
-                                        <svg class="join" width="20px" height="20px" >                                         
-                                            <use class="join-item" href="#icon-instagram"></use>
-                                        </svg>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="join-circle">
-                                        <svg class="join" width="20px" height="20px" >
-                                            <use class="join-item" href="#icon-twitter"></use>
-                                        </svg>
-                                    </div>
-                                </li>
-                                <li> 
-                                    <div class="join-circle">
-                                        <svg class="join" width="20px" height="20px" >
-                                            <use class="join-item" href="#icon-facebook"></use>
-                                        </svg>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="join-circle">
-                                        <svg class="join" width="20px" height="20px" >
-                                            <use class="join-item" href="#icon-linkedin2"></use>
-                                        </svg>
-                                    </div>
-                                </li>                                  
-                            </ul>
+                            </div>
                         </div>
-                    </div>
-                    <div class="input-div">
-
-                        <h4 class="email-txt">Підпишіться на розсилку</h4>  
+                     </section>
+                   <div> 
+                        <h4 class="email-txt">Підпишіться на розсилку</h4>
+                    <div class="input-div">  
                         <input class="email-input" type="email" name="email" placeholder="E-mail">
                         <button class="email-btn">Підписатися</button>
-                     
                     </div>
+                   </div>
                 </div>
             </footer>  
         </div>
