--- a/webstudio.html
+++ b/webstudio.html
@@ -265,9 +265,9 @@
                 </ul>
             <h2 class="employment-pic" >Чим ми займаємося</h2>
             <ul class="picture-box">
-                <li><div class="picture-overlay"><p>Десктопні додатки</p></div><img class="picture-box-item" src="./img/studio/picture-box1.png" srcset="/img/studio/picture-box1.png , /img/studio/picture-box1@2x.png" alt=""></li>
-                <li><div class="picture-overlay"><p>Мобільні додатки</p></div><img class="picture-box-item" src="./img/studio/picture-box2.png" srcset="/img/studio/picture-box2.png , /img/studio/picture-box2@2x.png" alt=""> </li>
-                <li><div class="picture-overlay"><p>Дизайнерські рішення</p></div><img class="picture-box-item" src="./img/studio/picture-box3.png" srcset="/img/studio/picture-box3.png , /img/studio/picture-box3@2x.png"  alt=""></li>
+                <li><div class="picture-overlay"><p>Десктопні додатки</p></div><img class="picture-box-item" src="./img/studio/picture-box1.png" srcset="./img/studio/picture-box1.png , ./img/studio/picture-box1@2x.png" alt=""></li>
+                <li><div class="picture-overlay"><p>Мобільні додатки</p></div><img class="picture-box-item" src="./img/studio/picture-box2.png" srcset="./img/studio/picture-box2.png , ./img/studio/picture-box2@2x.png" alt=""> </li>
+                <li><div class="picture-overlay"><p>Дизайнерські рішення</p></div><img class="picture-box-item" src="./img/studio/picture-box3.png" srcset="./img/studio/picture-box3.png , ./img/studio/picture-box3@2x.png"  alt=""></li>
             </ul>
         </div>
             <div class="background-div">
